<resources>
    <string name="app_name">TaskManagerWithRoom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_button">Register</string>
    <string name="confirm_password_tv_hint">Retype Password</string>
    <string name="password_tv_hint">Enter Password</string>
    <string name="username_tv_hint">Enter Username</string>
    <string name="email_tv_hint">Enter Email</string>
    <string name="signup_tv">Sig up</string>
</resources>